--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
+    background-color:whitesmoke;
 }
 
 .alert {
